<resources>
    <string name="app_name">Car State</string>

    <string name="bottom_navigation_settings">Настройки</string>
    <string name="bottom_navigation_history">История</string>
    <string name="bottom_navigation_purchases">Покупки</string>

    <string name="story_purchases">Итория покупок</string>
    <string name="purchases">Планирование покупок</string>
    <string name="app_settings">Настройки приложения</string>

    <string name="planned">Запланировать покупку</string>
    <string name="title">Заголовок</string>
    <string name="desc">Описание</string>
    <string name="prise">Цена</string>
    <string name="btn_add">Добавить</string>
    <string name="delete_all_cards">Удалить все карточки</string>
    <string name="update_card">Обновить карточку</string>
    <string name="update">Обновить</string>
    <string name="rub">Руб</string>

    <string name="undo">Отменить</string>
    <string name="card_send_to_history">Карточка отправлена в историю</string>
    <string name="card_sent_to_planned">Карточка отправлена в покупки</string>
    <string name="all_cards_deleted">Все карточки удалены</string>
    <string name="card_deleted">Карточка удалена</string>
    <string name="empty_field">Заполните поле</string>
    <string name="cards_were_deleted">Все карточки будут удалены</string>
    <string name="confirm_deleted_cards">Вы уверены, что хотите удалить все краточки?</string>
    <string name="yes">Да</string>
    <string name="declane">Отмена</string>
    <string name="pref_dark_theme_title">Тёмная тема</string>
    <string name="pref_dark_theme">dark_theme</string>
    <string name="pref_tutorial">tutorial</string>
    <string name="pref_tutorial_title">Показать туториал</string>
    <string name="summary_history">Отчёт по истории</string>
    <string name="summary_planned">Отчёт по покупкам</string>

    <string name="summary_history_prise_text">Общая сумма затрат</string>

    <string name="other">ПРОЧЕЕ</string>
    <string name="auto_parts">АВТОЗАПЧАСТИ</string>
    <string name="consum">РАСХОДНИКИ</string>
    <string name="tools">ИНСТРУМЕНТЫ</string>
    <string name="accessories">АКСЕССУАРЫ</string>
    <string name="disc_tires">ШИНЫ/ДИСКИ</string>
    <string name="all_planned_summary">Все планируемые расходы </string>
    <string name="all_history_summary">Все расходы из истории</string>
    <string name="app_content">Контент приложения</string>

    <string name="first_start">Первый старт</string>
    <string name="button_viewpager">Далее</string>
    <string name="button_viewpager_get_started">Начать</string>
    <string name="button_viewpager_go">Вперед</string>

    <string name="tutorial_item_one_desc">Это приложение предназначено для прозрачного ведения
        бюджета личного автомобиля. Планируйте будующие покупки, просматривайте историю и
        подробные отчёты</string>
    <string name="tutorial_item_one_title">Первые шаги</string>
    <string name="tutorial_item_two_title">Используйте свайпы для управления списками</string>
    <string name="tutorial_item_two_desс">Используйте свайп влево для удаления карточек,
        свайп вправо для отправки карточки в историю и обратно</string>
    <string name="tutorial_item_three_title">Самое время опробовать всё самостоятельно</string>
    <string name="tutorial_item_three_desc"> </string>

    <string-array name="menu_spinner_category">
        <item>ПРОЧЕЕ</item>
        <item>АВТОЗАПЧАСТИ</item>
        <item>РАСХОДНИКИ</item>
        <item>ИНСТРУМЕНТЫ</item>
        <item>АКСЕССУАРЫ</item>
        <item>ШИНЫ/ДИСКИ</item>
    </string-array>

</resources>
