<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@+id/navigation_purchases">


    <fragment
        android:id="@+id/navigation_history"
        android:name="com.pechatkin.carstate.presentation.ui.history.HistoryFragment"
        android:label="@string/story_purchases"
        >
        <action
            android:id="@+id/action_navigation_history_to_plannedSummaryFragment"
            app:destination="@id/planned_summary_fragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_navigation_history_to_historySummaryFragment"
            app:destination="@id/history_summary_fragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_purchases"
        android:name="com.pechatkin.carstate.presentation.ui.purchases.PurchasesFragment"
        android:label="@string/purchases" >
        <action
            android:id="@+id/action_navigation_purchases_to_plannedSummaryFragment"
            app:destination="@id/planned_summary_fragment"
            />
        <action
            android:id="@+id/action_navigation_purchases_to_historySummaryFragment"
            app:destination="@id/history_summary_fragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_navigation_purchases_to_firstOpenTutorialFragment"
            app:destination="@id/firstOpenTutorialFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.pechatkin.carstate.presentation.ui.settings.SettingsFragment"
        android:label="@string/app_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_firstOpenTutorialFragment"
            app:destination="@id/firstOpenTutorialFragment" />
    </fragment>
    <fragment
        android:id="@+id/planned_summary_fragment"
        android:name="com.pechatkin.carstate.presentation.ui.summary.PlannedSummaryFragment"
        android:label="@string/all_planned_summary" />
    <fragment
        android:id="@+id/history_summary_fragment"
        android:name="com.pechatkin.carstate.presentation.ui.summary.SummaryHistoryFragment"
        android:label="@string/all_history_summary" />
    <fragment
        android:id="@+id/firstOpenTutorialFragment"
        android:name="com.pechatkin.carstate.presentation.ui.tutorial.FirstOpenTutorialFragment"
        android:label="@string/first_start"
        tools:layout="@layout/fragment_first_open_tutorial" >
        <action
            android:id="@+id/action_firstOpenTutorialFragment_to_navigation_purchases"
            app:destination="@id/navigation_purchases" />
    </fragment>
</navigation>