<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:src="@drawable/icon_planned"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/summary_history_prise_text"/>

            <TextView
                android:id="@+id/summary_planned_prise"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_height="wrap_content"
                tools:text="2424221.00"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_big">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/summary_bottom_layout_style"
                    android:text="@string/auto_parts"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/summary_planned_auto_parts"
                    style="@style/summary_bottom_layout_style"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    tools:text="242.432"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:background="@color/colorAccent"
                android:layout_height="@dimen/separator_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/summary_bottom_layout_style"
                    android:text="@string/consum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/summary_planned_consum"
                    style="@style/summary_bottom_layout_style"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    tools:text="242.432"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:background="@color/colorAccent"
                android:layout_height="@dimen/separator_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/summary_bottom_layout_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/tools"/>

                <TextView
                    android:id="@+id/summary_planned_tools"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/summary_bottom_layout_style"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    tools:text="242.432"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:background="@color/colorAccent"
                android:layout_height="@dimen/separator_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/summary_bottom_layout_style"
                    android:text="@string/accessories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/summary_planned_accessories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/summary_bottom_layout_style"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    tools:text="242.432"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:background="@color/colorAccent"
                android:layout_height="@dimen/separator_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/summary_bottom_layout_style"
                    android:text="@string/disc_tires"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/summary_planned_disc_tires"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/summary_bottom_layout_style"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    tools:text="242.432"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:background="@color/colorAccent"
                android:layout_height="@dimen/separator_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/summary_bottom_layout_style"
                    android:text="@string/other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <TextView
                    android:id="@+id/summary_planned_other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/summary_bottom_layout_style"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    tools:text="242.432"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>